# storyToVideo

./: .gitignore  pyproject.toml  speakers.txt
config/: main_config.toml
src/: audio_generator.py  main.py  story_cleaner.py  video_processor.py
src/captacity/: __init__.py  captions.toml  transcriber.py
utils/: config_loader.py
