[tool.poetry]
package-mode = false
name = "storytovideo"
version = "0.1.0"
description = "Small project to generate video from a short story with captions and voiceover"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
groq = "^0.11.0"

[tool.poetry.group.dev.dependencies]
ffmpeg = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
